# FakeCrypt

./: .gitignore  Cargo.toml  README.md  cargo.toml  fileops.rs  makefile  stealth.rs
src/: fileops.rs  main.rs  stealth.rs
